--- a/app/src/main/res/layout/activity_search_plants.xml
+++ b/app/src/main/res/layout/activity_search_plants.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:theme="@style/Theme.MyApplication"
+    android:theme="@style/Theme.GardenWiz_v3"
     >
 
     <ScrollView
