--- a/app/src/main/res/layout/activity_pigo.xml
+++ b/app/src/main/res/layout/activity_pigo.xml
@@ -38,39 +38,37 @@
 
         <Button
             android:id="@+id/allRes"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:text="@string/view_all_res"
             app:layout_constraintBottom_toTopOf="@+id/quickRun"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-            app:layout_constraintVertical_bias="0.15"
-            tools:layout_editor_absoluteX="0dp" />
+            app:layout_constraintVertical_bias="0.15" />
 
         <Button
             android:id="@+id/quickRun"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="72dp"
-            android:layout_marginBottom="72dp"
+            android:layout_width="120dp"
+            android:layout_height="47dp"
+            android:layout_marginStart="44dp"
+            android:layout_marginLeft="44dp"
+            android:layout_marginBottom="60dp"
             android:text="@string/quick_run"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/allRes" />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <Button
             android:id="@+id/advRun"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="60dp"
-            android:layout_marginBottom="50dp"
+            android:layout_width="120dp"
+            android:layout_height="47dp"
+            android:layout_marginEnd="40dp"
+            android:layout_marginRight="40dp"
+            android:layout_marginBottom="60dp"
             android:text="@string/advanced_run"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toEndOf="@+id/quickRun"
-            app:layout_constraintTop_toBottomOf="@+id/allRes"
-            app:layout_constraintVertical_bias="0.276" />
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <LinearLayout
             android:id="@+id/linearLayout"
@@ -147,7 +145,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="183dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent" >
+                app:layout_constraintStart_toStartOf="parent">
 
 
             </ListView>
@@ -156,14 +154,15 @@
 
         <ImageView
             android:id="@+id/noConnection"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:contentDescription="@string/ifnotconnected"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/piTitle"
             app:srcCompat="@drawable/no_signalicon"
-            tools:ignore="ImageContrastCheck"
-            tools:layout_editor_absoluteX="0dp" />
+            tools:ignore="ImageContrastCheck" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
