--- a/app/src/main/res/layout/activity_pigo.xml
+++ b/app/src/main/res/layout/activity_pigo.xml
@@ -17,6 +17,10 @@
             android:alpha="0.75"
             android:contentDescription="@string/bg"
             android:scaleType="fitXY"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/leaf_bg"
             tools:ignore="ImageContrastCheck" />
 
@@ -38,8 +42,9 @@
 
         <TextView
             android:id="@+id/gardenWiz"
-            android:layout_width="155dp"
-            android:layout_height="61dp"
+            android:layout_width="146dp"
+            android:layout_height="60dp"
+            android:layout_marginTop="24dp"
             android:layout_weight="1"
             android:ems="10"
             android:inputType="textPersonName"
@@ -51,13 +56,14 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.496"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/imageView2"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.629" />
 
         <Button
             android:id="@+id/allRes"
-            android:layout_width="416dp"
-            android:layout_height="56dp"
+            android:layout_width="201dp"
+            android:layout_height="62dp"
+            android:layout_marginTop="24dp"
             android:text="@string/view_all_res"
             android:textColor="@color/white"
             app:backgroundTint="@color/light_green"
@@ -93,13 +99,13 @@
 
         <LinearLayout
             android:id="@+id/linearLayout"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="9dp"
+            android:layout_width="345dp"
+            android:layout_height="478dp"
+            android:layout_marginTop="16dp"
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/noConnection">
+            app:layout_constraintTop_toBottomOf="@+id/gardenWiz">
 
             <TextView
                 android:id="@+id/gwTitle"
@@ -126,10 +132,11 @@
                 tools:ignore="TextContrastCheck" />
 
             <ProgressBar
-                android:id="@+id/progressBar"
-                style="?android:attr/progressBarStyleHorizontal"
-                android:layout_width="match_parent"
-                android:layout_height="32dp"
+                android:id="@+id/determinantBar"
+                style="@android:style/Widget.ProgressBar.Horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:progress="0"
                 android:background="@color/white" />
 
             <TextView
@@ -215,17 +222,6 @@
             </ListView>
 
         </LinearLayout>
-
-        <ImageView
-            android:id="@+id/noConnection"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/ifnotconnected"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:srcCompat="@drawable/no_signalicon"
-            tools:ignore="ImageContrastCheck"
-            tools:layout_editor_absoluteY="62dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
