--- a/app/src/main/res/layout/activity_pigo.xml
+++ b/app/src/main/res/layout/activity_pigo.xml
@@ -66,7 +66,7 @@
             android:layout_marginTop="24dp"
             android:text="@string/view_all_res"
             android:textColor="@color/white"
-            app:backgroundTint="@color/light_green"
+            app:backgroundTint="@color/tree_green"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
@@ -77,7 +77,7 @@
             android:layout_height="wrap_content"
             android:text="@string/quick_run"
             android:textColor="@color/white"
-            app:backgroundTint="@color/light_green"
+            app:backgroundTint="@color/tree_green"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/advRun"
             app:layout_constraintHorizontal_bias="0.5"
@@ -90,7 +90,7 @@
             android:layout_height="wrap_content"
             android:text="@string/advanced_run"
             android:textColor="@color/white"
-            app:backgroundTint="@color/light_green"
+            app:backgroundTint="@color/tree_green"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -103,6 +103,8 @@
             android:layout_height="478dp"
             android:layout_marginTop="16dp"
             android:orientation="vertical"
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/gardenWiz">
@@ -111,7 +113,9 @@
                 android:id="@+id/gwTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/light_green"
+                android:background="@color/tree_green"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
                 android:text="@string/gardenwiz_data"
                 android:textAllCaps="true"
                 android:textAppearance="@style/CustomTextTitle"
@@ -124,6 +128,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
                 android:text="@string/name_of_run"
                 android:textAllCaps="true"
                 android:textAppearance="@style/CustomTextData"
@@ -136,13 +142,17 @@
                 style="@android:style/Widget.ProgressBar.Horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/white" />
+                android:background="@color/white"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp" />
 
             <TextView
                 android:id="@+id/durationList"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
                 android:text="@string/durationList"
                 android:textAllCaps="true"
                 android:textAppearance="@style/CustomTextData"
@@ -153,6 +163,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
                 android:text="@string/temperatureList"
                 android:textAllCaps="true"
                 android:textAppearance="@style/CustomTextData"
@@ -163,6 +175,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
                 android:text="@string/moistureList"
                 android:textAllCaps="true"
                 android:textAppearance="@style/CustomTextData"
@@ -173,6 +187,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
                 android:text="@string/humidList"
                 android:textAllCaps="true"
                 android:textAppearance="@style/CustomTextData"
@@ -183,6 +199,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
                 android:text="@string/phList"
                 android:textAllCaps="true"
                 android:textAppearance="@style/CustomTextData"
@@ -193,6 +211,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
                 android:text="@string/lightList"
                 android:textAllCaps="true"
                 android:textAppearance="@style/CustomTextData"
@@ -202,7 +222,9 @@
                 android:id="@+id/gwTitle2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@color/light_green"
+                android:background="@color/tree_green"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
                 android:text="Results"
                 android:textAllCaps="true"
                 android:textAppearance="@style/CustomTextTitle"
