--- a/app/src/main/res/layout/activity_pigo.xml
+++ b/app/src/main/res/layout/activity_pigo.xml
@@ -14,7 +14,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:adjustViewBounds="false"
-            android:alpha="0.75"
+            android:alpha="0.5"
             android:contentDescription="@string/bg"
             android:scaleType="fitXY"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -47,9 +47,8 @@
             android:layout_marginTop="24dp"
             android:layout_weight="1"
             android:ems="10"
-            android:inputType="textPersonName"
             android:text="@string/weatherwiz_status"
-            android:textColor="@color/white"
+            android:textColor="#035405"
             android:textSize="49dp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/etName"
