--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -7,16 +7,19 @@
     tools:context=".LoginPage">
 
     <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="569dp"
-        android:layout_height="731dp"
+        android:id="@+id/bg"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:adjustViewBounds="false"
         android:alpha="0.5"
+        android:contentDescription="@string/bg"
+        android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.274"
-        app:srcCompat="@drawable/leaf_bg" />
+        app:srcCompat="@drawable/leaf_bg"
+        tools:ignore="ImageContrastCheck"/>
 
     <EditText
         android:id="@+id/etName"
@@ -27,13 +30,15 @@
         android:ems="10"
         android:hint="Name"
         android:inputType="textPersonName"
+        android:minHeight="48dp"
         android:padding="5dp"
+        android:textColorHint="#616161"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.405" />
+        app:layout_constraintVertical_bias="0.309" />
 
     <EditText
         android:id="@+id/etPassword"
@@ -44,7 +49,9 @@
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
+        android:minHeight="48dp"
         android:padding="5dp"
+        android:textColorHint="#616161"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -54,12 +61,12 @@
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btnLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="140dp"
+        android:layout_height="60dp"
         android:background="@drawable/button_colors"
         android:text="Login"
         android:textColor="@color/white"
-        android:textSize="17sp"
+        android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -71,6 +78,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="No of attempts remaining: "
+        android:textColor="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -91,19 +99,20 @@
 
     <TextView
         android:id="@+id/GardenWiz"
-        android:layout_width="248dp"
-        android:layout_height="68dp"
+        android:layout_width="245dp"
+        android:layout_height="74dp"
+        android:layout_marginTop="24dp"
+        android:layout_weight="1"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Garden Wiz"
-        android:textColor="@color/white"
+        android:text="@string/weather_wiz"
+        android:textColor="#035405"
         android:textSize="49dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/etName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/imageView2"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.629" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
