--- a/app/src/main/res/layout/activity_registration_page.xml
+++ b/app/src/main/res/layout/activity_registration_page.xml
@@ -73,7 +73,10 @@
         android:background="@drawable/button_colors"
         android:text="Create Account"
         android:textColor="@color/white"
-        android:textSize="17sp"
+        android:textSize="20dp"
+        android:textAllCaps="true"
+        android:textAppearance="@style/CustomTextTitle"
+        app:fontFamily="sans-serif-condensed"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/regPassword"
