--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,7 +64,10 @@
             android:background="@drawable/button_colors"
             android:text="@string/run_pi"
             android:textColor="@color/white"
-            android:textSize="17sp"
+            android:textSize="20dp"
+            android:textAllCaps="true"
+            android:textAppearance="@style/CustomTextTitle"
+            app:fontFamily="sans-serif-condensed"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
@@ -78,7 +81,10 @@
             android:background="@drawable/button_colors"
             android:text="@string/search_plants"
             android:textColor="@color/white"
-            android:textSize="17sp"
+            android:textSize="20dp"
+            android:textAllCaps="true"
+            android:textAppearance="@style/CustomTextTitle"
+            app:fontFamily="sans-serif-condensed"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.497"
             app:layout_constraintStart_toStartOf="parent"
@@ -92,7 +98,10 @@
             android:background="@drawable/button_colors"
             android:text="@string/history"
             android:textColor="@color/white"
-            android:textSize="17sp"
+            android:textSize="20dp"
+            android:textAllCaps="true"
+            android:textAppearance="@style/CustomTextTitle"
+            app:fontFamily="sans-serif-condensed"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
