--- a/app/src/main/res/layout/activity_search_plants.xml
+++ b/app/src/main/res/layout/activity_search_plants.xml
@@ -41,7 +41,7 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/indoor"
-            android:layout_width="180dp"
+            android:layout_width="150dp"
             android:layout_height="48dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
@@ -55,33 +55,9 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/edibleView" />
 
-        <Spinner
-            android:id="@+id/droughtSpin"
-            android:layout_width="190dp"
-            android:layout_height="48dp"
-            android:layout_marginTop="5dp"
-            android:background="@color/white"
-            android:spinnerMode="dropdown"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/droughtView"
-            app:layout_constraintTop_toBottomOf="@+id/bloomSpin"
-            tools:ignore="SpeakableTextPresentCheck" />
-
-        <Spinner
-            android:id="@+id/durationSpin"
-            android:layout_width="190dp"
-            android:layout_height="48dp"
-            android:layout_marginTop="5dp"
-            android:background="@color/white"
-            android:spinnerMode="dropdown"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/durationView"
-            app:layout_constraintTop_toBottomOf="@+id/droughtSpin"
-            tools:ignore="SpeakableTextPresentCheck" />
-
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/durationView"
-            android:layout_width="180dp"
+            android:layout_width="150dp"
             android:layout_height="48dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
@@ -97,7 +73,7 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/stateView"
-            android:layout_width="180dp"
+            android:layout_width="150dp"
             android:layout_height="48dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
@@ -109,11 +85,11 @@
             android:textSize="20dp"
             app:fontFamily="sans-serif-condensed"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/button" />
+            app:layout_constraintTop_toBottomOf="@+id/name_run" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/edibleView"
-            android:layout_width="180dp"
+            android:layout_width="150dp"
             android:layout_height="48dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
@@ -129,7 +105,7 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/droughtView"
-            android:layout_width="180dp"
+            android:layout_width="150dp"
             android:layout_height="48dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
@@ -145,7 +121,7 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/commercialView"
-            android:layout_width="180dp"
+            android:layout_width="150dp"
             android:layout_height="48dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
@@ -161,7 +137,7 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/bloomView"
-            android:layout_width="180dp"
+            android:layout_width="150dp"
             android:layout_height="48dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
@@ -177,7 +153,7 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/seasonView"
-            android:layout_width="180dp"
+            android:layout_width="150dp"
             android:layout_height="48dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
@@ -192,48 +168,78 @@
             app:layout_constraintTop_toBottomOf="@+id/typeView" />
 
         <Spinner
-            android:id="@+id/commSpin"
-            android:layout_width="190dp"
-            android:layout_height="48dp"
-            android:layout_marginTop="5dp"
-            android:background="@color/white"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/commercialView"
-            app:layout_constraintTop_toBottomOf="@+id/durationSpin"
-            tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck" />
-
-        <Spinner
-            android:id="@+id/bloomSpin"
-            android:layout_width="190dp"
-            android:layout_height="48dp"
-            android:layout_marginTop="5dp"
-            android:background="@color/white"
-            android:spinnerMode="dropdown"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/bloomView"
-            app:layout_constraintTop_toBottomOf="@+id/seasonSpinner"
-            tools:ignore="SpeakableTextPresentCheck" />
-
-        <Spinner
             android:id="@+id/spinner_type"
-            android:layout_width="190dp"
+            android:layout_width="150dp"
             android:layout_height="48dp"
             android:layout_marginTop="5dp"
             android:background="@color/white"
             android:spinnerMode="dropdown"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.307"
             app:layout_constraintStart_toEndOf="@+id/typeView"
             app:layout_constraintTop_toBottomOf="@+id/spinner_state"
             tools:ignore="SpeakableTextPresentCheck" />
 
         <Spinner
-            android:id="@+id/seasonSpinner"
-            android:layout_width="190dp"
+            android:id="@+id/commSpin"
+            android:layout_width="150dp"
+            android:layout_height="48dp"
+            android:layout_marginTop="5dp"
+            android:background="@color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.307"
+            app:layout_constraintStart_toEndOf="@+id/commercialView"
+            app:layout_constraintTop_toBottomOf="@+id/durationSpin"
+            tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck" />
+
+        <Spinner
+            android:id="@+id/durationSpin"
+            android:layout_width="150dp"
             android:layout_height="48dp"
             android:layout_marginTop="5dp"
             android:background="@color/white"
             android:spinnerMode="dropdown"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.307"
+            app:layout_constraintStart_toEndOf="@+id/durationView"
+            app:layout_constraintTop_toBottomOf="@+id/droughtSpin"
+            tools:ignore="SpeakableTextPresentCheck" />
+
+        <Spinner
+            android:id="@+id/droughtSpin"
+            android:layout_width="150dp"
+            android:layout_height="48dp"
+            android:layout_marginTop="5dp"
+            android:background="@color/white"
+            android:spinnerMode="dropdown"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.307"
+            app:layout_constraintStart_toEndOf="@+id/droughtView"
+            app:layout_constraintTop_toBottomOf="@+id/bloomSpin"
+            tools:ignore="SpeakableTextPresentCheck" />
+
+        <Spinner
+            android:id="@+id/bloomSpin"
+            android:layout_width="150dp"
+            android:layout_height="48dp"
+            android:layout_marginTop="5dp"
+            android:background="@color/white"
+            android:spinnerMode="dropdown"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.307"
+            app:layout_constraintStart_toEndOf="@+id/bloomView"
+            app:layout_constraintTop_toBottomOf="@+id/seasonSpinner"
+            tools:ignore="SpeakableTextPresentCheck" />
+
+        <Spinner
+            android:id="@+id/seasonSpinner"
+            android:layout_width="150dp"
+            android:layout_height="48dp"
+            android:layout_marginTop="5dp"
+            android:background="@color/white"
+            android:spinnerMode="dropdown"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.307"
             app:layout_constraintStart_toEndOf="@+id/seasonView"
             app:layout_constraintTop_toBottomOf="@+id/spinner_type"
             tools:ignore="SpeakableTextPresentCheck" />
@@ -252,9 +258,10 @@
 
 
         <EditText
-            android:id="@+id/searchbar_name"
-            android:layout_width="190dp"
+            android:id="@+id/name_input"
+            android:layout_width="150dp"
             android:layout_height="48dp"
+            android:layout_marginTop="8dp"
             android:background="@color/white"
             android:ems="10"
             android:hint="@string/enter_plant_name"
@@ -263,15 +270,17 @@
             android:textColorHint="#757575"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/button"
-            app:layout_constraintTop_toBottomOf="@+id/Search_PLANTS" />
+            app:layout_constraintHorizontal_bias="0.285"
+            app:layout_constraintStart_toEndOf="@+id/name_run"
+            app:layout_constraintTop_toBottomOf="@+id/filter_run" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/button"
-            android:layout_width="180dp"
+            android:id="@+id/name_run"
+            android:layout_width="150dp"
             android:layout_height="48dp"
             android:layout_marginStart="20dp"
             android:layout_marginLeft="20dp"
+            android:layout_marginTop="8dp"
             android:background="@color/tree_green"
             android:text="@string/plant_name"
             android:textAllCaps="true"
@@ -280,11 +289,11 @@
             android:textSize="20dp"
             app:fontFamily="sans-serif-condensed"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/Search_PLANTS" />
+            app:layout_constraintTop_toBottomOf="@+id/filter_run" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/typeView"
-            android:layout_width="180dp"
+            android:layout_width="150dp"
             android:layout_height="48dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
@@ -300,15 +309,16 @@
 
         <Spinner
             android:id="@+id/spinner_state"
-            android:layout_width="190dp"
+            android:layout_width="150dp"
             android:layout_height="48dp"
             android:layout_marginTop="5dp"
             android:background="@color/white"
             android:ems="10"
             android:spinnerMode="dropdown"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.307"
             app:layout_constraintStart_toEndOf="@+id/stateView"
-            app:layout_constraintTop_toBottomOf="@+id/searchbar_name"
+            app:layout_constraintTop_toBottomOf="@+id/name_input"
             tools:ignore="SpeakableTextPresentCheck" />
 
         <androidx.appcompat.widget.AppCompatButton
@@ -351,7 +361,7 @@
             app:layout_constraintTop_toBottomOf="@+id/searchButton" />
 
         <TextView
-            android:id="@+id/Search_PLANTS"
+            android:id="@+id/filter_run"
             android:layout_width="320dp"
             android:layout_height="65dp"
             android:layout_marginStart="24dp"
