--- a/app/src/main/res/layout/quickdialog.xml
+++ b/app/src/main/res/layout/quickdialog.xml
@@ -27,13 +27,13 @@
             android:inputType="none"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/button"
+            app:layout_constraintStart_toEndOf="@+id/name_run"
             app:layout_constraintTop_toBottomOf="@+id/textView4"
             tools:ignore="SpeakableTextPresentCheck"
             android:autofillHints="" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/name_run"
             android:layout_width="150dp"
             android:layout_height="50dp"
             android:layout_marginStart="8dp"
