--- a/app/src/main/res/layout/activity_search_plants.xml
+++ b/app/src/main/res/layout/activity_search_plants.xml
@@ -29,7 +29,7 @@
         <Switch
             android:id="@+id/indoorSwitch"
             android:layout_width="50dp"
-            android:layout_height="48dp"
+            android:layout_height="50dp"
             android:layout_marginStart="5dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="140dp"
@@ -41,24 +41,23 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/indoor"
-            android:layout_width="150dp"
-            android:layout_height="48dp"
+            android:layout_width="130dp"
+            android:layout_height="35dp"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="20dp"
             android:background="@color/tree_green"
             android:text="@string/indoors"
             android:textAllCaps="true"
             android:textAppearance="@style/CustomTextTitle"
             android:textColor="@color/white"
-            android:textSize="20dp"
             app:fontFamily="sans-serif-condensed"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/edibleView" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/durationView"
-            android:layout_width="150dp"
-            android:layout_height="48dp"
+            android:layout_width="130dp"
+            android:layout_height="35dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
             android:background="@color/tree_green"
@@ -66,15 +65,14 @@
             android:textAllCaps="true"
             android:textAppearance="@style/CustomTextTitle"
             android:textColor="@color/white"
-            android:textSize="20dp"
             app:fontFamily="sans-serif-condensed"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/droughtView" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/stateView"
-            android:layout_width="150dp"
-            android:layout_height="48dp"
+            android:layout_width="130dp"
+            android:layout_height="35dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
             android:background="@color/tree_green"
@@ -82,15 +80,14 @@
             android:textAllCaps="true"
             android:textAppearance="@style/CustomTextTitle"
             android:textColor="@color/white"
-            android:textSize="20dp"
             app:fontFamily="sans-serif-condensed"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/name_run" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/edibleView"
-            android:layout_width="150dp"
-            android:layout_height="48dp"
+            android:layout_width="130dp"
+            android:layout_height="35dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
             android:background="@color/tree_green"
@@ -98,15 +95,14 @@
             android:textAllCaps="true"
             android:textAppearance="@style/CustomTextTitle"
             android:textColor="@color/white"
-            android:textSize="20dp"
             app:fontFamily="sans-serif-condensed"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/commercialView" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/droughtView"
-            android:layout_width="150dp"
-            android:layout_height="48dp"
+            android:layout_width="130dp"
+            android:layout_height="35dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
             android:background="@color/tree_green"
@@ -114,15 +110,14 @@
             android:textAllCaps="true"
             android:textAppearance="@style/CustomTextTitle"
             android:textColor="@color/white"
-            android:textSize="18dp"
             app:fontFamily="sans-serif-condensed"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/bloomView" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/commercialView"
-            android:layout_width="150dp"
-            android:layout_height="48dp"
+            android:layout_width="130dp"
+            android:layout_height="35dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
             android:background="@color/tree_green"
@@ -130,15 +125,14 @@
             android:textAllCaps="true"
             android:textAppearance="@style/CustomTextTitle"
             android:textColor="@color/white"
-            android:textSize="18dp"
             app:fontFamily="sans-serif-condensed"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/durationView" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/bloomView"
-            android:layout_width="150dp"
-            android:layout_height="48dp"
+            android:layout_width="130dp"
+            android:layout_height="35dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
             android:background="@color/tree_green"
@@ -146,15 +140,14 @@
             android:textAllCaps="true"
             android:textAppearance="@style/CustomTextTitle"
             android:textColor="@color/white"
-            android:textSize="20dp"
             app:fontFamily="sans-serif-condensed"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/seasonView" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/seasonView"
-            android:layout_width="150dp"
-            android:layout_height="48dp"
+            android:layout_width="130dp"
+            android:layout_height="35dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
             android:background="@color/tree_green"
@@ -162,7 +155,6 @@
             android:textAllCaps="true"
             android:textAppearance="@style/CustomTextTitle"
             android:textColor="@color/white"
-            android:textSize="20dp"
             app:fontFamily="sans-serif-condensed"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/typeView" />
@@ -170,7 +162,7 @@
         <Spinner
             android:id="@+id/spinner_type"
             android:layout_width="150dp"
-            android:layout_height="48dp"
+            android:layout_height="35dp"
             android:layout_marginTop="5dp"
             android:background="@color/white"
             android:spinnerMode="dropdown"
@@ -183,7 +175,7 @@
         <Spinner
             android:id="@+id/commSpin"
             android:layout_width="150dp"
-            android:layout_height="48dp"
+            android:layout_height="35dp"
             android:layout_marginTop="5dp"
             android:background="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
@@ -195,7 +187,7 @@
         <Spinner
             android:id="@+id/durationSpin"
             android:layout_width="150dp"
-            android:layout_height="48dp"
+            android:layout_height="35dp"
             android:layout_marginTop="5dp"
             android:background="@color/white"
             android:spinnerMode="dropdown"
@@ -208,7 +200,7 @@
         <Spinner
             android:id="@+id/droughtSpin"
             android:layout_width="150dp"
-            android:layout_height="48dp"
+            android:layout_height="35dp"
             android:layout_marginTop="5dp"
             android:background="@color/white"
             android:spinnerMode="dropdown"
@@ -221,7 +213,7 @@
         <Spinner
             android:id="@+id/bloomSpin"
             android:layout_width="150dp"
-            android:layout_height="48dp"
+            android:layout_height="35dp"
             android:layout_marginTop="5dp"
             android:background="@color/white"
             android:spinnerMode="dropdown"
@@ -234,7 +226,7 @@
         <Spinner
             android:id="@+id/seasonSpinner"
             android:layout_width="150dp"
-            android:layout_height="48dp"
+            android:layout_height="35dp"
             android:layout_marginTop="5dp"
             android:background="@color/white"
             android:spinnerMode="dropdown"
@@ -247,7 +239,7 @@
         <Switch
             android:id="@+id/edibleSwitch"
             android:layout_width="50dp"
-            android:layout_height="48dp"
+            android:layout_height="50dp"
             android:layout_marginStart="5dp"
             android:layout_marginTop="5dp"
             android:layout_marginEnd="140dp"
@@ -260,7 +252,7 @@
         <EditText
             android:id="@+id/name_input"
             android:layout_width="150dp"
-            android:layout_height="48dp"
+            android:layout_height="35dp"
             android:layout_marginTop="8dp"
             android:background="@color/white"
             android:ems="10"
@@ -276,8 +268,8 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/name_run"
-            android:layout_width="150dp"
-            android:layout_height="48dp"
+            android:layout_width="130dp"
+            android:layout_height="35dp"
             android:layout_marginStart="20dp"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="8dp"
@@ -293,8 +285,8 @@
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/typeView"
-            android:layout_width="150dp"
-            android:layout_height="48dp"
+            android:layout_width="130dp"
+            android:layout_height="35dp"
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
             android:background="@color/tree_green"
@@ -302,7 +294,6 @@
             android:textAllCaps="true"
             android:textAppearance="@style/CustomTextTitle"
             android:textColor="@color/white"
-            android:textSize="20dp"
             app:fontFamily="sans-serif-condensed"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/stateView" />
@@ -310,7 +301,7 @@
         <Spinner
             android:id="@+id/spinner_state"
             android:layout_width="150dp"
-            android:layout_height="48dp"
+            android:layout_height="35dp"
             android:layout_marginTop="5dp"
             android:background="@color/white"
             android:ems="10"
@@ -326,7 +317,6 @@
             android:layout_width="80dp"
             android:layout_height="49dp"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="8dp"
             android:layout_marginBottom="24dp"
             android:background="@drawable/button_colors"
             android:text="@string/go"
@@ -339,13 +329,13 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/indoor"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintTop_toBottomOf="@+id/indoorSwitch"
+            app:layout_constraintVertical_bias="0.165" />
 
         <TextView
             android:id="@+id/howTo"
-            android:layout_width="332dp"
-            android:layout_height="37dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
             android:background="@color/gradient_green"
             android:paddingLeft="8dp"
@@ -353,17 +343,19 @@
             android:textAllCaps="true"
             android:textAppearance="@style/CustomTextTitle"
             android:textColor="#000000"
-            android:textSize="14dp"
+            android:textSize="12dp"
             app:fontFamily="sans-serif-condensed"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/searchButton" />
+            app:layout_constraintTop_toBottomOf="@+id/searchButton"
+            app:layout_constraintVertical_bias="0.152" />
 
         <TextView
             android:id="@+id/filter_run"
-            android:layout_width="320dp"
-            android:layout_height="65dp"
+            android:layout_width="190dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="24dp"
             android:layout_marginLeft="24dp"
             android:layout_marginTop="16dp"
@@ -371,7 +363,7 @@
             android:ems="10"
             android:text="Search Plants"
             android:textColor="#035405"
-            android:textSize="49dp"
+            android:textSize="30dp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
